--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "cable_ready": "^4.4.0-pre1",
     "stimulus": "^1.1.1",
-    "stimulus_reflex": "hopsoft/stimulus_reflex#master"
+    "stimulus_reflex": "3.3.0"
   },
   "version": "0.1.0",
   "devDependencies": {
